# ML_Basic

./: 01.ipynb  03.ipynb  04.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  15.ipynb  16.ipynb  17.ipynb  2.ipynb  Perceptron.py  and_model.pickle  lr.pickle  main.py  pyproject.toml  temperature.ipynb  test.ipynb
data/기온/: OBS_ASOS_DD_2020.xls  OBS_ASOS_DD_2021.xls  OBS_ASOS_DD_2022.xls  OBS_ASOS_DD_2023.xls
data/배추가격/: 가격정보202001-05.xls  가격정보202006-10.xls  가격정보202011-12.xls  가격정보202101-05.xls  가격정보202106-10.xls  가격정보202111-12.xls  가격정보202201-05.xls  가격정보202206-10.xls  가격정보202211-12.xls  가격정보202301-05.xls  가격정보202306-10.xls  가격정보202311-12.xls
