[project]
name = "ml-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "koreanize-matplotlib>=0.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xgboost>=3.0.1",
]
